Replace OpenJDK8 with Zulu OpenJDK 11